feat: enhance API security, performance, and code quality
🔴 Critical Security Fixes:
- Implement secure CORS configuration with allowed origins to prevent CSRF attacks
- Remove rawBody parsing to eliminate security risks from large payloads
- Move plaintext admin credentials to environment variables (DEFAULT_ADMIN_EMAIL/PASSWORD, SUPER_ADMIN_EMAIL/PASSWORD)
- Add rate limiting with @nestjs/throttler (100 req/min, 1000 req/hour)
- Remove duplicate AdminModule import in app.module.ts

🟡 Performance & Robustness Improvements:
- Add response compression middleware with gzip
- Optimize response transformation by eliminating double JSON serialization
- Implement structured logging with correlation IDs and request tracing
- Add Helmet.js for comprehensive security headers
- Create health check endpoints (/api/health, /api/health/detailed)
- Reduce file upload limits from 25MB to 10MB for better security
- Add correlation ID middleware for request tracking
- Implement structured HTTP request logging with timing

🟢 Code Quality Enhancements:
- Remove unused variables and imports (logging interceptor data param, auth guard separator)
- Clean up CredentialsSeparator import from auth guard
- Ensure TypeScript strict compliance with noUnusedLocals/noUnusedParameters
- Verify build integrity and compilation success

✅ Dependencies Added:
- @nestjs/throttler: ^6.3.0 (rate limiting)
- compression: ^1.7.4 (response compression)
- helmet: ^8.0.0 (security headers)

✅ New Files Created:
- health/health.controller.ts - Health check endpoints
- health/health.service.ts - Database connectivity monitoring
- health/health.module.ts - Health module configuration
- common/middleware/correlation-id.middleware.ts - Request correlation tracking
- common/interceptors/logging.interceptor.ts - Structured HTTP logging

✅ Configuration Improvements:
- Environment variables for admin credentials and CORS origins
- Structured logging with correlation IDs
- Reduced file upload limits
- Added security m

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.3.0",
     "@ngrok/ngrok": "^1.6.0",
     "@remoola/api-types": "^0.0.0",
     "@remoola/database-2": "^0.0.0",
@@ -38,12 +39,14 @@
     "bullmq": "^5.58.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^10.0.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^164.1.0",
+    "helmet": "^8.0.0",
     "ioredis": "^5.7.0",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
